# breakdown

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: array2d.h  bit_buffer.h  bits.h  bmp.h  buffer.h  crc.h  csv.h  deflate.h  dictionary.h  draw.h  endian.h  error.h  frame.h  gui.h  gz.h  hexdump.h  huffman.h  image.h  layer.h  list.h  plot.h  png.h  rle.h  stream.h  vector.h  zip.h  zlib.h
src/analysis/: vector.c
src/compression/: deflate.c  huffman.c  rle.c  zlib.c
src/data/: array2d.c  bit_buffer.c  buffer.c  dictionary.c  list.c  stream.c  vector.c
src/data/array2d/: array2d.c
src/ecc/: crc.c
src/file/: bmp.c  csv.c  gz.c  png.c  zip.c
src/file/bmp/: bmp.c
src/graphics/: draw.c  frame.c  gui.c  image.c  layer.c  plot.c
src/system/: bits.c  error.c  hexdump.c
test/analysis/: test_vect.csv  vector_test.c
test/compression/: gz_test.c  huffman_test.c  rle_test.c  zip_test.c  zlib_test.c
test/data/: dictionary_test.c  list_test.c  stream_test.c
test/file/: png_test.c
test/file/bmp/: bmp_test.c
test/graphics/: frame_test.c  image_test.c  plot_test.c
